--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
-div{
-    height: 300px;
-    width:  300px;
+:root {
+    --main-bg-color: #D84282;
 }
 
 #menu {
@@ -8,7 +7,7 @@ div{
     width: 200px;
     margin-bottom: 25px;
     margin-left: 25px;
-    background-color: #D84282;
+    background-color: var(--main-bg-color);
     position: absolute;
     top: 100px;
 }
@@ -16,7 +15,7 @@ div{
 #menu::before   {
     display: block;
     content: "";
-    border-bottom: 30px solid #D84282;
+    border-bottom: 30px solid var(--main-bg-color);
     width: 200px;
     margin: 25px;
     position: absolute;
@@ -27,7 +26,7 @@ div{
 #menu::after   {
     display: block;
     content: "";
-    border-bottom: 30px solid #D84282;
+    border-bottom: 30px solid var(--main-bg-color);
     width: 200px;
     margin: 25px;
     position: absolute;
